Added page individual decorator and tests.

--- a/tests/Evolution/Individual/Decorators/data/page03.html
+++ b/tests/Evolution/Individual/Decorators/data/page03.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-<?php echo $style; ?>
+    <style>
+        div.test{color:red;}
+    </style>
 </head>
 <body>
-<?php echo $body; ?>
+<div></div>
 </body>
 </html>
